# ravelights

./: .flake8  .gitignore  .gitmodules  Dockerfile  README.md  bpm.py  docker-compose.yml  main.py  print.py  profiling.py  pyproject.toml
.github/workflows/: pytest.yml
manual_tests/: t_artnet.py  t_get_random_names.py
src/ravelights/: __init__.py  app.py  constants.py  logo.py
src/ravelights/artnet/: artnet_serial_transmitter.py  artnet_transmitter.py  artnet_udp_transmitter.py
src/ravelights/audio/: aubio_beat_detector.py  audio_analyzer.py  audio_analyzer_process.py  audio_data.py  audio_source.py  beat_detector.py  frequency_band_analyzer.py  ring_buffer.py
src/ravelights/configs/: components.py  device_configs.py  template_backup.py  visualizer_configurations.py
src/ravelights/core/: autopilot.py  blueprints.py  bpmhandler.py  color_handler.py  colorhandler.py  controls.py  custom_typing.py  device.py  device_settings.py  device_shared.py  effect_handler.py  effect_super.py  effecthandler.py  event_handler.py  eventhandler.py  generator_super.py  instruction.py  instruction_handler.py  instruction_queue.py  instructionhandler.py  instructionqueue.py  meta_handler.py  methandler.py  pattern_scheduler.py  patternscheduler.py  performance_logger.py  performancelogger.py  pid.py  pixel_matrix.py  pixelmatrix.py  ravelights_app.py  render_module.py  rendermodule.py  settings.py  template_objects.py  templateobjects.py  time_handler.py  timehandler.py  timeline.py  utils.py
src/ravelights/devtools/: profiler.py
src/ravelights/dimmers/: dimmer_decay.py  dimmer_decay_fast.py  dimmer_decay_medium.py  dimmer_decay_slow.py  dimmer_decay_very_fast.py  dimmer_decay_very_slow.py  dimmer_peak.py  dimmer_random_remove.py  dimmer_sideswipe.py  dimmer_sine.py
src/ravelights/effects/: effect_bw.py  effect_color_shift.py  effect_color_strobe.py  effect_color_strobe_rainbow.py  effect_color_strobe_rainbow_pixel.py  effect_color_swap.py  effect_colorize.py  effect_flicker.py  effect_frameskip.py  effect_super.py  effect_tint.py  special_effect_vfilter.py
src/ravelights/interface/: color_remap.py  data_router.py  datarouter.py  discovery.py  meta.py  rest_api.py  rest_client.py  restapi.py  visualizer.py
src/ravelights/lights/: lights_super.py
src/ravelights/patterns/: pattern_audio.py  pattern_debug.py  pattern_debug_bpm_sync.py  pattern_debug_gradient.py  pattern_debug_linear_block.py  pattern_debug_solid_color.py  pattern_double_strobe.py  pattern_gradient.py  pattern_hor_stripes.py  pattern_inverse_square.py  pattern_meteor.py  pattern_moving_blocks.py  pattern_movingstrobe.py  pattern_movingstrobe_fast.py  pattern_movingstrobe_legacy.py  pattern_movingstrobe_slow.py  pattern_movingstrobev2.py  pattern_pid.py  pattern_pid2.py  pattern_pid_inverse.py  pattern_pid_splash.py  pattern_rain.py  pattern_random_meteor.py  pattern_random_stripes.py  pattern_shadow.py  pattern_shadow_big.py  pattern_shadow_small.py  (+6 more)
src/websocket_ui/: script.js  websocket_ui.html
test/: conftest.py  test_api.py  test_artnet_dmx_packet.py  test_autopilot.py  test_beatmatch.py  test_controls.py  test_effect.py  test_meta.py  test_playwright.py  test_ring_buffer.py  test_run_all_effects.py  test_run_all_patterns.py  test_timeline.py  test_utils.py  udp_server.py
(+29 files in other folders)
