[project]
name = "ravelights"
version = "0.1.0"
requires-python = "~=3.10"
dependencies = [
    "numpy == 1.26.3",
    "plum-py == 0.8.7",
    "Flask == 3.0.1",
    "Flask-RESTful == 0.3.10",
    "flask-socketio == 5.3.6",
    "requests == 2.31.0",
    "zeroconf == 0.128.0",
    "loguru == 0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest == 7.4.4",
    "pytest-flask == 1.3.0",
    "mypy == 1.8.0",
    "ruff >= 0.1.13",
]
gui = [
    "pygame == 2.5.2",
]
serial = [
    "pyserial == 3.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ravelights", "src/ravelights_ui"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"
