[project]
name = "ravelights"
dynamic = ["version"]
readme = "README.md"
requires-python = "~=3.11"

classifiers = [
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Framework :: Pytest",
]

dependencies = [
    "numpy == 1.26.3",
    "plum-py == 0.8.7",
    "Flask == 3.0.1",
    "Flask-RESTful == 0.3.10",
    "flask-socketio == 5.3.6",
    "requests == 2.31.0",
    "zeroconf == 0.128.0",
    "loguru == 0.7.2",
    "pyserial == 3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest == 7.4.4",
    "pytest-flask == 1.3.0",
    "mypy == 1.8.0",
    "ruff >= 0.1.13",
]
gui = [
    "pygame == 2.5.2",
]
audio = [
    "pyaudio == 0.2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "main.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ravelights", "src/ravelights_ui"]

[tool.hatch.version]
path = "src/ravelights/constants.py"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
files = "src/ravelights"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = "test"
markers = [
    "slow: marks tests as slow",
    "playwright: marks tests that depend on playwright",
]
addopts = "-m 'not slow not playwright'"
